feat(uvivents): my-tickets route and logic
